# finro

./: .gitignore  AGENTS.md  AGENTS.md.template  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  SKILL-NOTES.md  STATS.md
.claude/agents/: pr-code-reviewer.md  pr-security-reviewer.md  pr-test-reviewer.md
.claude/commands/: pr-review.md
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  pages.yml
_site/: deployment-phases.html  index.html
_site/agenda/: acme.html
_site/customers/: acme.html  beta.html  gamma.html
_site/demo/: primitives.html
_site/qbr/: acme.html
benchmarks/: run-all.sh  run.sh
benchmarks/tests/: curata-fix-bug.sh  ops-add-flag.sh  plugins-new-skill.sh  tshub-cross-cutting.sh
docs/: about.yaml  deploy.yaml  examples.yaml  finro.yaml  freshness.yaml  guide.yaml  how.yaml  index.yaml  kazam.yaml  themes.yaml  wishes.yaml  workspace.yaml
docs/_site/: examples.html  guide.html  index.html
docs/_site/components/: content.html  grids.html  index.html  interactive.html  layout.html
docs/components/: charts.yaml  content.yaml  grids.yaml  index.yaml  indicators.yaml  interactive.yaml  layout.yaml  navigation.yaml
docs/examples/: agenda.yaml  api.yaml  brief.yaml  dashboard.yaml  deck.yaml  doc.yaml  hackernews-live.yaml  hackernews.yaml  kb.yaml  landing.yaml
examples/kb/: deployment-phases.yaml  index.yaml  pseudo.yaml
examples/kb/_site/: deployment-phases.html  index.html
examples/kb/_site/agenda/: acme.html
examples/kb/agenda/: acme.yaml
examples/kb/customers/: acme.yaml  beta.yaml  gamma.yaml
examples/kb/demo/: primitives.yaml
examples/kb/qbr/: acme.yaml
launch/: hn-copy.md  launch-post.md  social-posts.md
src/: agents.rs  board.rs  build.rs  dev.rs  freshness.rs  icons.rs  id.rs  init.rs  links.rs  llms.rs  main.rs  minify.rs  theme.rs  types.rs  workspace.rs
src/ctx/: hooks.rs  mod.rs  scan.rs  types.rs
src/render/: agenda.rs  article.rs  charts.rs  components.rs  dashboard.rs  mod.rs  phases.rs  qbr.rs  scripts.rs  shell.rs  shells.rs  slug.rs
src/track/: graph.rs  mod.rs  store.rs  types.rs
src/wish/: brief.rs  dashboard.rs  deck.rs  mod.rs
tests/: integration.rs
(+4 files in other folders)
