[package]
name = "kazam"
version = "0.3.0"
edition = "2021"
description = "Beautiful sites from simple YAML"
license = "MIT"
repository = "https://github.com/tdiderich/kazam"
homepage = "https://tdiderich.github.io/kazam/"
readme = "README.md"

[[bin]]
name = "kazam"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.11"
walkdir = "2"
anyhow = "1"
tiny_http = "0.12"
notify = "6"
