[package]
name = "kazam"
version = "1.0.1"
edition = "2021"
description = "Beautiful static sites from simple YAML. One Rust binary, no framework, no npm, no runtime JS."
license = "MIT"
repository = "https://github.com/tdiderich/kazam"
homepage = "https://tdiderich.github.io/kazam/"
documentation = "https://tdiderich.github.io/kazam/"
readme = "README.md"
keywords = ["static-site", "ssg", "yaml", "cli", "docs"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "kazam"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.11"
walkdir = "2"
anyhow = "1"
tiny_http = "0.12"
notify = "6"
