[package]
name = "kazam"
version = "1.3.0"
edition = "2021"
description = "Agent workspace and static site generator. Codebase indexing, task tracking, visual board — one Rust binary."
license = "MIT"
repository = "https://github.com/tdiderich/kazam"
homepage = "https://tdiderich.github.io/kazam/"
documentation = "https://tdiderich.github.io/kazam/"
readme = "README.md"
keywords = ["agent", "workspace", "static-site", "yaml", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kazam"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.11"
walkdir = "2"
anyhow = "1"
tiny_http = "0.12"
notify = "6"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
